--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "3.4.x",
     "jade": "*",
     "mongoose": "3.8.x",
+    "newrelic": "1.4.x",
     "request": "2.36.x",
-    "newrelic": "1.4.x"
+    "uglify-js": "^2.4.16"
   }
 }
